<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_ex_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/aeworkout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/workout_name1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/aeinstruction_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aeworkout_text" />

        <TextView
            android:id="@+id/aeinstruction_text"
            android:layout_width="329dp"
            android:layout_height="98dp"
            android:text="@string/instructions_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aeinstruction_text_label"
            app:layout_constraintVertical_bias="0.0"
            tools:textSize="11sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="342dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/aetype_text_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/aemuscle_text_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/muscle1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/aequipment_text_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equipment1"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/aedifficulty_text_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Difficulty2"
                android:textSize="10sp" />

        </LinearLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/add_btn_1"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/aeinstruction_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toEndOf="@+id/aeworkout_text"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>