<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AEActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/babckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:background="#800080"
                android:text="@string/workouts"
                android:textAlignment="viewStart"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercisesRecycler"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="392dp"
            android:layout_height="695dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_data_found_please_adjust_your_filters"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">



            <Button
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/prev" />


            <TextView
                android:id="@+id/pageInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/page_x_of_y" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/next" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
