<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#000000">

    <!-- Logo Image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/white_logo" />
        <Switch
            android:id="@+id/saveCredentialsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="16dp"
            android:text="@string/remember_credentials"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="43dp"
                android:text="@string/e_mail"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="40dp"
                android:background="#FFFFFF"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                android:text="@string/password"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="40dp"
                android:background="#FFFFFF"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="135dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/log_in"
            android:textColor="#000000" />

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="202dp"
            android:backgroundTint="#000000"
            android:text="@string/new_here_register"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
