<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/workoutImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/back_button_createworkout"
        android:layout_marginTop="7dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/workoutImageView"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="16dp"
        android:text=""
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_marginTop="8dp"
        android:text=""
        android:textStyle="italic" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/upload_image" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/uploadButton"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@+id/uploadButton"
        android:text="@string/post_workout" />

    <Button
        android:id="@+id/add_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadButton"
        android:layout_marginTop="21dp"
        android:text="@string/add_exercise" />

    <LinearLayout
        android:id="@+id/exercisesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_exercise_button"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <!-- Exercise items will be added here dynamically -->

    </LinearLayout>



    <Button
        android:id="@+id/back_button_createworkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:text="@string/button7" />

</RelativeLayout>
