<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_ex_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_layout"
        android:layout_width="346dp"
        android:layout_height="211dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/usernam_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/username0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Thumbnail"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/Thumbnail"
            android:layout_width="92dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495" />

        <TextView
            android:id="@+id/exercise_name_card_text"
            android:layout_width="158dp"
            android:layout_height="23dp"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/date_card_text"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/date_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:text="@string/_00_00_0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="239dp"
            android:layout_height="160dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/exercise_name_card_text">

            <TextView
                android:id="@+id/workouts_card_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workouts2"
                android:textAlignment="center" />

            <!-- Replace the ChipGroup with a LinearLayout -->
            <LinearLayout
                android:id="@+id/workouts_chip_group"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:orientation="vertical">
                <!-- Add your linear layout items here -->
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
